# QR-Code-Generator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cmake_raspi.sh
include/: qrcodegen.cpp  qrcodegen.h
src/: CMakeLists.txt  main.cpp
